--- a/src/components/layout/header/header.html
+++ b/src/components/layout/header/header.html
@@ -1,5 +1,7 @@
 <template>
     <require from="./header.css"></require>
 
+    <button class="icon-button" click.delegate="toggleSidebar()"><i class="fa fa-bars"></i></button>
+
     <h1>Tiempo Development</h1>
 </template>
