--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -1,3 +1,5 @@
 header {
-    background-color: #550000;
+    background-color: #ffffff;
+    border-bottom: 4px solid #00adad;
+    padding: 0 0.5em;
 }
