--- a/src/components/layout/header/header.html
+++ b/src/components/layout/header/header.html
@@ -1,7 +1,6 @@
 <template>
     <require from="./header.css"></require>
 
-    <button class="icon-button" click.delegate="toggleSidebar()"><i class="fa fa-bars"></i></button>
-
+    <button class="icon-button" click.trigger="toggleSidebar()"><i class="fa fa-bars"></i></button>
     <h1>Tiempo Development</h1>
 </template>
