--- a/src/components/layout/sidebar/sidebar.html
+++ b/src/components/layout/sidebar/sidebar.html
@@ -2,11 +2,9 @@
     <require from="./sidebar.css"></require>
     <nav>
         <ul>
-            <li>Link 01</li>
-            <li>Link 02</li>
-            <li>Link 03</li>
-            <li>Link 04</li>
-            <li>Link 05</li>
+            <li>My goals</li>
+            <li>Manager input</li>
+            <li>Career path</li>
         </ul>
     </nav>
 </template>
