--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -2,4 +2,7 @@ header {
     background-color: #ffffff;
     border-bottom: 4px solid #00adad;
     padding: 0 0.5em;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
 }
