--- a/src/components/layout/sidebar/sidebar.html
+++ b/src/components/layout/sidebar/sidebar.html
@@ -1,10 +1,18 @@
 <template>
     <require from="./sidebar.css"></require>
+    <h2>Tiempo Goals</h2>
+
     <nav>
         <ul>
-            <li>My goals</li>
-            <li>Manager input</li>
-            <li>Career path</li>
+            <li>
+                <a route-href="route: my-goals">My goals</a>
+            </li>
+            <li>
+                <a route-href="route: my-goals">Manager input</a>
+            </li>
+            <li>
+                <a route-href="route: my-goals">Career path</a>
+            </li>
         </ul>
     </nav>
 </template>
