--- a/src/components/layout/sidebar/sidebar.scss
+++ b/src/components/layout/sidebar/sidebar.scss
@@ -1,3 +1,28 @@
-nav {
-
+sidebar {
+    font-size: 1.5em;
+    color: #333333;
+    text-align: center;
+    ul {
+        display: block;
+        margin: 0;
+        padding: 0;
+        li {
+            list-style: none;
+            margin: 0;
+            padding: 0.5em 0.25em;
+            text-align: center;
+            cursor: pointer;
+            color: #333333;
+            &:hover {
+                background-color: #666666;
+                color: #eeeeee;
+            }
+            a {
+                display: block;
+                text-decoration: none;
+                color: inherit;
+            }
+        }
+    }
 }
+
