Refactor and cleanuo

--- a/src/app/components/layout/tdap-main/tdap-main.html
+++ b/src/app/components/layout/tdap-main/tdap-main.html
@@ -1,5 +1,5 @@
 <template>
-    <require from="../tdap-sidebar/tdap-sidebar"></require>
+    <require from="app/components/layout/tdap-sidebar/tdap-sidebar"></require>
 
     <require from="./tdap-main.css"></require>
 
