--- a/src/app.scss
+++ b/src/app.scss
@@ -23,7 +23,8 @@ body {
         height: 4em;
         line-height: 4em;
         button {
-            transition: transform linear 100ms;
+            transform: rotate(270deg);
+            transition: transform 200ms linear;
         }
     }
 
@@ -35,8 +36,8 @@ body {
         background-color: #057483;
         overflow: hidden;
         transform: translate3d(0, 0, 0);
-        transition: padding ease-in 100ms;
         padding-left: 0;
+        transition: padding 200ms ease-in;
         & > sidebar {
             display: block;
             position: absolute;
@@ -50,7 +51,7 @@ body {
             left: -$sidebarWidth;
             width: $sidebarWidth;
             transform: translate3d(0, 0, 0);
-            transition: left ease-in 100ms;
+            transition: left 200ms ease-in;
         }
     }
 
@@ -73,7 +74,7 @@ body {
         }
         > header {
             button {
-                transform: rotate(90deg);
+                transform: rotate(0deg);
             }
         }
     }
