--- a/src/app/components/layout/tdap-sidebar/tdap-sidebar.html
+++ b/src/app/components/layout/tdap-sidebar/tdap-sidebar.html
@@ -10,10 +10,10 @@
                     <a route-href="route: my-goals">My goals</a>
                 </li>
                 <li>
-                    <a route-href="route: my-goals">Manager input</a>
+                    <a route-href="route: manager-input">Manager input</a>
                 </li>
                 <li>
-                    <a route-href="route: my-goals">Career path</a>
+                    <a route-href="route: career-path">Career path</a>
                 </li>
             </ul>
         </nav>
