Add fetch polyfill

--- a/src/app/components/layout/tdap-sidebar/tdap-sidebar.html
+++ b/src/app/components/layout/tdap-sidebar/tdap-sidebar.html
@@ -7,13 +7,19 @@
         <nav>
             <ul>
                 <li>
-                    <a route-href="route: my-goals">My goals</a>
+                    <a route-href="route: my-goals">Priorities management</a>
+                </li>
+                <li>
+                    <a route-href="route: my-goals">Priorities visualization</a>
                 </li>
                 <li>
                     <a route-href="route: manager-input">Manager input</a>
                 </li>
                 <li>
                     <a route-href="route: career-path">Career path</a>
+                </li>
+                <li>
+                    <a route-href="route: career-path">Skill compass</a>
                 </li>
             </ul>
         </nav>
